# rfid_reader_firmware

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  idf_component.yml  rfid_reader_main.c  tasks_common.h  types.h
main/app_state_disp/: app_state_disp.c  app_state_disp.h
main/comm/ble_app/: ble_app.c  ble_app.h  ble_prph.h  gatt_svr.c
main/comm/comm_if/: comm_if.c  comm_if.h
main/comm/http_svr/: http_svr.c  http_svr.h
main/comm/usb_app/: usb_app.c  usb_app.h
main/comm/wifi_app/: wifi_app.c  wifi_app.h
main/ota/: ota.c  ota.h
main/prphs/: battery.c  battery.h  buttons.c  buttons.h  buzzer.c  buzzer.h  fan.c  fan.h  leds.c  leds.h  melodies.h  notes.h  oled_display.c  oled_display.h  tft_display.c  tft_display.h
main/settings/: settings.c  settings.h
main/silion_sim7200/: silion_sim7200.c  silion_sim7200.h  silion_sim7200_commands.h  silion_sim7200_status_codes.h  uart.c  uart.h
main/utils/: utils.c  utils.h
main/www/: index.html
scripts/: run.sh
