idf_component_register(SRCS "rfid_reader_main.c"
        "app_state_disp/app_state_disp.c"
        "comm/ble_app/ble_app.c"
        "comm/ble_app/gatt_svr.c"
        "comm/comm_if/comm_if.c"
        "comm/http_svr/http_svr.c"
        "comm/usb_app/usb_app.c"
        "comm/wifi_app/wifi_app.c"
        "ota/ota.c"
        "prphs/battery.c"
        "prphs/buttons.c"
        "prphs/buzzer.c"
        "prphs/fan.c"
        "prphs/leds.c"
        "prphs/oled_display.c"
        "prphs/tft_display.c"
        "settings/settings.c"
        "silion_sim7200/silion_sim7200.c"
        "utils/utils.c"
        INCLUDE_DIRS "."
        "app_state_disp"
        "comm/ble_app"
        "comm/comm_if"
        "comm/http_svr"
        "comm/usb_app"
        "comm/wifi_app"
        "ota"
        "prphs"
        "settings"
        "silion_sim7200"
        "utils"
        EMBED_FILES "www/index.html"
        "www/favicon.ico"
        "www/index.css.gz"
        "www/index.js.gz")
